--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -844,6 +844,7 @@ main {
 
 
 /*--------Модальное окно----------*/
+
 .form {
   width: 528px;
   outline: 1px solid tomato;
@@ -853,11 +854,31 @@ main {
   
 }
 
+.form .js-speaker-form {
+  opacity: 0;
+  overflow: hidden;
+  transform: scale(1.5);
+  pointer-events: none;
+}
+
+.form-list {}
+
+.form-title {
+  margin: 0;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: #212121;
+  padding-bottom: 30px;
+}
+
 .form-field {
+  margin: 0px 0px 28px;
+
+  position: relative;
   /*outline: 1px solid blue;*/
   display: flex;
   flex-direction: column;
-  margin-bottom: 28px;
 
   font-family: Roboto;
   font-style: normal;
@@ -867,12 +888,45 @@ main {
   letter-spacing: 0.01rem;
 
   color: #757575;
+}
+
+.form-field input {
+  margin: 0;
+  padding: 11px 16px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
 }
 
-.form-field label {
-margin-bottom: 5px;
+.form-field input::placeholder {
+  color: #757575;
+}
+
+.form-label {
+  position: absolute;
+  top: 50%;
+  left: 42px;
+  transform: translateY(-50%);
+  transition: transform 250ms linear;
+}
+
+.form-input {
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 42px;
+}
+
+.form-input:focus + .form-label {
+  color: var(--accent-color);
+  transform: translateY(-50%);
+}
+
+.comment {
+  resize: none;
+  padding: 12px 16px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
 }
