--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -927,13 +927,11 @@ main {
 }
 
 .form-input:focus + .form-label, /*при вводе текста в графу поднимает заголовок над графой*/
- .form-input:not(:placeholder-shown) + .form-label { /*делает так чтобы при написании текста не опускался заголовок графы*/
+.form-input:not(:placeholder-shown) + .form-label { /*делает так чтобы при написании текста не опускался заголовок графы*/
   font-size: 12px;
   color: var(--accent-color);
   transform: translate(-25px, -35px);
 }
-
-
 
 .form-comment {
   resize: none;
@@ -972,7 +970,99 @@ main {
   fill: var(--accent-color);
 }
 
+.checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 
+  position: absolute;
+
+  /* или 
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;*/
+}
+
+.field {
+  display: flex;
+  align-items: center;
+  /*outline: 1px solid black;*/
+}
+
+.checkbox-icon {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 7px;
+  
+  border: 2px solid black;
+  border-radius: 2px;
+}
+
+.checkbox:checked + .checkbox-icon {
+  border-color: var(--accent-color);
+  background-color: var(--accent-color);
+  background-image: url('../images/icon-check.svg');
+  background-size: contain;
+  background-origin: border-box;
+}
+
+.checkbox:checked ~ .label {
+  transform: translateX(5px);
+}
+
+.label {
+  transition: transform var(--timing-function);
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  /* identical to box height, or 171% */
+    
+  letter-spacing: 0.03rem;
+  
+  color: #757575;
+}
+
+.agreement {
+  text-decoration-line: underline;
+  color: var(--accent-color);
+}
+
+.form-btn {
+  transform: scale(1, 1);
+  transition: background-color var(--timing-function), transform var(--timing-function);
+
+  width: 200px;
+  height: 50px;
+
+  font-family: Roboto;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 30px;
+  /* identical to box height, or 187% */
+  font-style: normal;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06rem;
+
+  background-color: var(--accent-color);
+  color: var(--white-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.form-btn:hover,
+.form-btn:focus {
+  background-color: #188CE8;;
+  transform: scale(1.05, 1.05);
+}
 
 
 
@@ -1000,4 +1090,17 @@ main {
 
 .form-input:not(:placeholder-shown) + .form-label {
   transform: translateY(-50px);
+} */
+
+
+/* спрятать
+.visualy-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 } */
